feat: Mejorar diseño del overlay de carga

--- a/index.html
+++ b/index.html
@@ -196,6 +196,21 @@
       </div>
     </div>
 
+    <!-- Overlay de carga post-login -->
+    <div id="loadingOverlay" class="loading-overlay" style="display:none;">
+      <div class="loading-content">
+        <div class="loading-spinner">
+          <div class="spinner-star"><i class="far fa-star"></i></div>
+          <div class="spinner-star"><i class="far fa-star"></i></div>
+          <div class="spinner-star"><i class="far fa-star"></i></div>
+        </div>
+        <div class="loading-message" id="loadingMessage">Iniciando sesión...</div>
+        <div class="loading-progress">
+          <div class="progress-bar" id="progressBar"></div>
+        </div>
+      </div>
+    </div>
+
     <!-- Modal de Configuración -->
     <div id="configModal" class="modal" style="display:none;">
       <div class="modal-content" style="max-width: 600px;">
